--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,22 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vue2</title>
+  <title>Vue2-Study测试</title>
+  <!-- 引入mocha的样式文件 -->
+  <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
 </head>
-<script src="index.js"></script>
 <body>
-  
+  <!-- 给mocha显示的内容设置容器 -->
+  <div id="mocha"></div>
+  <!-- 引入mocha和chai -->
+  <script src="../node_modules/mocha/mocha.js"></script>
+  <script src="../node_modules/chai/chai.js"></script>
+  <script>
+    mocha.setup('bdd')
+  </script>
+  <script src="../dist/main.js"></script>
+  <script>
+    mocha.run()
+  </script>
 </body>
 </html>
