--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <script>
     mocha.setup('bdd')
   </script>
-  <script src="../dist/main.js"></script>
+  <!-- <script src="../dist/main.js"></script> -->
   <script>
     mocha.run()
   </script>
