--- a/src/debugger/index.html
+++ b/src/debugger/index.html
@@ -4,9 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chrome Debuuger</title>
+</head>
+<script src="./index.ts"></script>
+<body>
+
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Debugger</title>
 </head>
 <body>
+  <div>
+    <p>段落一</p>
+    <p>段落二</p>
+    <div class="box">
+      <div class="content">内容一</div>
+      <div>内容二
+<div @click="handleClick"></div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
